--- a/theory.tex
+++ b/theory.tex
@@ -1,6 +1,6 @@
 % !TEX root = thesis-ex.tex
 
-This section shall discuss the theoretical background necessary to understand jet measurements. It is will discuss the fundamentals of quantum chromodynamics (QCD), the quark gluon plasma (QGP),  jets, and subsequently jet energy loss. 
+This section shall discuss the theoretical background necessary to understand jet measurements. It will discuss the fundamentals of quantum chromodynamics (QCD), the heavy ion collision system and the quark gluon plasma that is formed, and finally jets and jet energy loss. 
 
 
 \section{Quantum Chromodynamics}
@@ -8,7 +8,7 @@ This section shall discuss the theoretical background necessary to understand je
 \input{qcd.tex}
 
 \section{Heavy Ion Collisions and the Quark Gluon Plasma}
-\label{sec:qgp}
+\label{sec:HICollisions}
 \input{qgp.tex}
 
 \section{Jets and Jet Quenching}
