--- a/thesis-ex.bib
+++ b/thesis-ex.bib
@@ -1,4 +1,360 @@
 % !TEX root = thesis-ex.tex
+@article{doi:10.1146/annurev.nucl.57.090506.123020,
+author = {Miller, Michael L. and Reygers, Klaus and Sanders, Stephen J. and Steinberg, Peter},
+title = {Glauber Modeling in High-Energy Nuclear Collisions},
+journal = {Annual Review of Nuclear and Particle Science},
+volume = {57},
+number = {1},
+pages = {205-243},
+year = {2007},
+doi = {10.1146/annurev.nucl.57.090506.123020},
+URL = {https://doi.org/10.1146/annurev.nucl.57.090506.123020},
+eprint = {https://doi.org/10.1146/annurev.nucl.57.090506.123020},
+}
+
+
+
+
+@article{PhysRevLett.116.132302,
+  title = {Anisotropic Flow of Charged Particles in Pb-Pb Collisions at $\sqrt{{s}_{NN}}=5.02$ TeV},
+  author = "{ALICE Collaboration}",
+  collaboration = {The ALICE Collaboration},
+  journal = {Phys. Rev. Lett.},
+  volume = {116},
+  issue = {13},
+  pages = {132302},
+  numpages = {12},
+  year = {2016},
+  month = {Apr},
+  publisher = {American Physical Society},
+  doi = {10.1103/PhysRevLett.116.132302},
+  url = {https://link.aps.org/doi/10.1103/PhysRevLett.116.132302}
+}
+
+
+
+@article{PhysRevC.89.044906,
+  title = {Measurement of higher-order harmonic azimuthal anisotropy in PbPb collisions at $\sqrt{{s}_{\mathit{NN}}}=2.76$ TeV},
+  author = "{CMS Collaboration}",
+  collaboration = {CMS Collaboration},
+  journal = {Phys. Rev. C},
+  volume = {89},
+  issue = {4},
+  pages = {044906},
+  numpages = {31},
+  year = {2014},
+  month = {Apr},
+  publisher = {American Physical Society},
+  doi = {10.1103/PhysRevC.89.044906},
+  url = {https://link.aps.org/doi/10.1103/PhysRevC.89.044906}
+}
+
+
+@article{PhysRevLett.98.242302,
+  title = {System Size, Energy, Pseudorapidity, and Centrality Dependence of Elliptic Flow},
+  author = "{PHOBOS Collaboration}",
+  journal = {Phys. Rev. Lett.},
+  volume = {98},
+  issue = {24},
+  pages = {242302},
+  numpages = {5},
+  year = {2007},
+  month = {Jun},
+  publisher = {American Physical Society},
+  doi = {10.1103/PhysRevLett.98.242302},
+  url = {https://link.aps.org/doi/10.1103/PhysRevLett.98.242302}
+}
+
+
+@article{PhysRevLett.91.182301, 
+  title = {Elliptic Flow of Identified Hadrons in $\mathrm{A}\mathrm{u}+\mathrm{A}\mathrm{u}$ Collisions at $\sqrt{{s}_{NN}}=200$ GeV},
+  author = "{PHENIX Collaboration}",
+  collaboration = {PHENIX Collaboration},
+  journal = {Phys. Rev. Lett.},
+  volume = {91},
+  issue = {18},
+  pages = {182301},
+  numpages = {6},
+  year = {2003},
+  month = {Oct},
+  publisher = {American Physical Society},
+  doi = {10.1103/PhysRevLett.91.182301},
+  url = {https://link.aps.org/doi/10.1103/PhysRevLett.91.182301}
+}
+
+
+
+@article{PhysRevLett.87.182301, 
+  title = {Identified Particle Elliptic Flow in $Au+Au$ Collisions at $\sqrt{{s}_{NN}}=130 \mathrm{GeV}$},
+  author = "{STAR Collaboration}",
+  collaboration = {STAR Collaboration},
+  journal = {Phys. Rev. Lett.},
+  volume = {87},
+  issue = {18},
+  pages = {182301},
+  numpages = {6},
+  year = {2001},
+  month = {Oct},
+  publisher = {American Physical Society},
+  doi = {10.1103/PhysRevLett.87.182301},
+  url = {https://link.aps.org/doi/10.1103/PhysRevLett.87.182301}
+}
+
+
+
+
+@article{PhysRevC.90.024908, 
+  title = {Measurement of jet fragmentation in PbPb and $pp$ collisions at $\sqrt{{s}_{NN}}=2.76$ TeV},
+  author = "{CMS Collaboration}",
+  collaboration = {CMS Collaboration},
+  journal = {Phys. Rev. C},
+  volume = {90},
+  issue = {2},
+  pages = {024908},
+  numpages = {20},
+  year = {2014},
+  month = {Aug},
+  publisher = {American Physical Society},
+  doi = {10.1103/PhysRevC.90.024908},
+  url = {https://link.aps.org/doi/10.1103/PhysRevC.90.024908}
+}
+
+
+@Article{Aad2014, 
+author="{ATLAS Collaboration}",
+title="Measurement of flow harmonics with multi-particle cumulants in Pb+Pb collisions at $\sqrt{{s}_{NN}}=2.76$ TeV with the ATLAS detector",
+journal="The European Physical Journal C",
+year="2014",
+month="Nov",
+day="26",
+volume="74",
+number="11",
+pages="3157",
+issn="1434-6052",
+doi="10.1140/epjc/s10052-014-3157-z",
+url="https://doi.org/10.1140/epjc/s10052-014-3157-z"
+}
+
+
+
+@article{PhysRevC.88.044910,
+  title = {Centrality dependence of $\ensuremath{\pi}$, $K$, and $p$ production in Pb-Pb collisions at $\sqrt{{s}_{NN}}=2.76$ TeV},
+  author = "{ALICE Collaboration}",
+  collaboration = {ALICE Collaboration},
+  journal = {Phys. Rev. C},
+  volume = {88},
+  issue = {4},
+  pages = {044910},
+  numpages = {23},
+  year = {2013},
+  month = {Oct},
+  publisher = {American Physical Society},
+  doi = {10.1103/PhysRevC.88.044910},
+  url = {https://link.aps.org/doi/10.1103/PhysRevC.88.044910}
+}
+
+
+@article{PhysRevC.75.024910,
+  title = {Identified hadron transverse momentum spectra in Au+Au collisions at $\sqrt{{s}_{\mathit{NN}}}=62.4$ GeV},
+  author = "{PHOBOS Collaboration}",
+  collaboration = {PHOBOS Collaboration},
+  journal = {Phys. Rev. C},
+  volume = {75},
+  issue = {2},
+  pages = {024910},
+  numpages = {14},
+  year = {2007},
+  month = {Feb},
+  publisher = {American Physical Society},
+  doi = {10.1103/PhysRevC.75.024910},
+  url = {https://link.aps.org/doi/10.1103/PhysRevC.75.024910}
+}
+
+
+@article{PhysRevC.72.014908,
+  title = {Centrality dependent particle production at $y=0$ and $y~1$ in Au+Au collisions at $\sqrt{{s}_{\mathit{NN}}}=$ 200 GeV},
+  author = "{BRAHMS Collaboration}",
+  collaboration = {BRAHMS Collaboration},
+  journal = {Phys. Rev. C},
+  volume = {72},
+  issue = {1},
+  pages = {014908},
+  numpages = {9},
+  year = {2005},
+  month = {Jul},
+  publisher = {American Physical Society},
+  doi = {10.1103/PhysRevC.72.014908},
+  url = {https://link.aps.org/doi/10.1103/PhysRevC.72.014908}
+}
+
+
+
+@article{PhysRevC.69.024904,
+  title = {Single identified hadron spectra from $\sqrt{{s}_{NN}}=130\phantom{\rule{0.3em}{0ex}}\text{GeV}$ $\text{Au}+\text{Au}$ collisions},
+  author = "{PHENIX Collaboration}",
+  collaboration = {PHENIX Collaboration},
+  journal = {Phys. Rev. C},
+  volume = {69},
+  issue = {2},
+  pages = {024904},
+  numpages = {29},
+  year = {2004},
+  month = {Feb},
+  publisher = {American Physical Society},
+  doi = {10.1103/PhysRevC.69.024904},
+  url = {https://link.aps.org/doi/10.1103/PhysRevC.69.024904}
+}
+
+
+
+@article{PhysRevC.93.024917,
+  title = {Production of light nuclei and anti-nuclei in $pp$ and Pb-Pb collisions at energies available at the CERN Large Hadron Collider},
+  author = "{ALICE Collaboration}",
+  collaboration = {ALICE Collaboration},
+  journal = {Phys. Rev. C},
+  volume = {93},
+  issue = {2},
+  pages = {024917},
+  numpages = {20},
+  year = {2016},
+  month = {Feb},
+  publisher = {American Physical Society},
+  doi = {10.1103/PhysRevC.93.024917},
+  url = {https://link.aps.org/doi/10.1103/PhysRevC.93.024917}
+}
+
+
+
+@article{ADAMS2005102,
+title = "Experimental and theoretical challenges in the search for the quark–gluon plasma: The STAR Collaboration's critical assessment of the evidence from RHIC collisions",
+journal = "Nuclear Physics A",
+volume = "757",
+number = "1",
+pages = "102 - 183",
+year = "2005",
+note = "First Three Years of Operation of RHIC",
+issn = "0375-9474",
+doi = "https://doi.org/10.1016/j.nuclphysa.2005.03.085",
+url = "http://www.sciencedirect.com/science/article/pii/S0375947405005294",
+author = "{STAR Collaboration}"
+}
+
+@article{Fodor_2004,
+	doi = {10.1088/1126-6708/2004/04/050},
+	url = {https://doi.org/10.1088%2F1126-6708%2F2004%2F04%2F050},
+	year = 2004,
+	month = {apr},
+	publisher = {Springer Nature},
+	volume = {2004},
+	number = {04},
+	pages = {050--050},
+	author = {Z. Fodor and S.D Katz},
+	title = {Critical point of {QCD} at finite T and ~, lattice results for physical quark masses},
+	journal = {Journal of High Energy Physics},
+}
+
+@article{2016235,
+title = "Direct photon production in Pb–Pb collisions at sNN=2.76 TeV",
+journal = "Physics Letters B",
+volume = "754",
+pages = "235 - 248",
+year = "2016",
+issn = "0370-2693",
+doi = "https://doi.org/10.1016/j.physletb.2016.01.020",
+url = "http://www.sciencedirect.com/science/article/pii/S0370269316000320",
+author = "{ALICE Collaboration}"
+}
+
+@article{PhysRevLett.104.132301,
+  title = {Enhanced Production of Direct Photons in $\mathrm{Au}+\mathrm{Au}$ Collisions at $\sqrt{{s}_{NN}}=200\text{ }\text{ }\mathrm{GeV}$ and Implications for the Initial Temperature},
+  author = "{PHENIX Collaboration}",
+  collaboration = {PHENIX Collaboration},
+  journal = {Phys. Rev. Lett.},
+  volume = {104},
+  issue = {13},
+  pages = {132301},
+  numpages = {6},
+  year = {2010},
+  month = {Mar},
+  publisher = {American Physical Society},
+  doi = {10.1103/PhysRevLett.104.132301},
+  url = {https://link.aps.org/doi/10.1103/PhysRevLett.104.132301}
+}
+
+  
+  
+  @article{RevModPhys.90.025005,
+  title = {Jet measurements in heavy ion physics},
+  author = {Connors, Megan and Nattrass, Christine and Reed, Rosi and Salur, Sevil},
+  journal = {Rev. Mod. Phys.},
+  volume = {90},
+  issue = {2},
+  pages = {025005},
+  numpages = {52},
+  year = {2018},
+  month = {Jun},
+  publisher = {American Physical Society},
+  doi = {10.1103/RevModPhys.90.025005},
+  url = {https://link.aps.org/doi/10.1103/RevModPhys.90.025005}
+}
+
+@Inbook{Muller1993,
+author="M{\"u}ller, Berndt",
+editor="Gutbrod, Hans H.
+and Rafelski, Johann",
+title="Physics of the Quark-Gluon Plasma",
+bookTitle="Particle Production in Highly Excited Matter",
+year="1993",
+publisher="Springer US",
+address="Boston, MA",
+pages="11--55",
+isbn="978-1-4615-2940-8",
+doi="10.1007/978-1-4615-2940-8_2",
+url="https://doi.org/10.1007/978-1-4615-2940-8_2"
+}
+
+
+
+@article{Yagi:2005yb,
+      author         = "Yagi, K. and Hatsuda, T. and Miake, Y.",
+      title          = "{Quark-gluon plasma: From big bang to little bang}",
+      journal        = "Camb. Monogr. Part. Phys. Nucl. Phys. Cosmol.",
+      volume         = "23",
+      year           = "2005",
+      pages          = "1-446",
+      SLACcitation   = "%%CITATION = CMPCE,23,1;%%"
+}
+
+@article{PhysRevD.72.034004,
+  title = {Phase diagram of neutral quark matter: Self-consistent treatment of quark masses},
+  author = {Ruster, Stefan B. and Werth, Verena and Buballa, Michael and Shovkovy, Igor A. and Rischke, Dirk H.},
+  journal = {Phys. Rev. D},
+  volume = {72},
+  issue = {3},
+  pages = {034004},
+  numpages = {13},
+  year = {2005},
+  month = {Aug},
+  publisher = {American Physical Society},
+  doi = {10.1103/PhysRevD.72.034004},
+  url = {https://link.aps.org/doi/10.1103/PhysRevD.72.034004}
+}
+
+
+@article{SHURYAK198071,
+title = "Quantum chromodynamics and the theory of superdense matter",
+journal = "Physics Reports",
+volume = "61",
+number = "2",
+pages = "71 - 158",
+year = "1980",
+issn = "0370-1573",
+doi = "https://doi.org/10.1016/0370-1573(80)90105-2",
+url = "http://www.sciencedirect.com/science/article/pii/0370157380901052",
+author = "Edward V. Shuryak",
+abstract = "At high enough density and/or temperature ordinary matter undergoes a transition into a plasma-like phase, consisting of quarks and gluons rather than of separate hadrons. Due to asymptotic freedom, the asymptotic properties of such matter can be calculated perturbatively, while in the discussion of phase transitions one should concentrate on nonperturbative effects. Recent progress in this theory is reviewed, as well as its applications to such topics as hadronic structure, neutron stars, high energy collisions of hadrons, etc."
+}
+
 @article{Gaillard:1998ui,
       author         = "Gaillard, Mary K. and Grannis, Paul D. and Sciulli, Frank
                         J.",
