--- a/qcd.tex
+++ b/qcd.tex
@@ -1,5 +1,7 @@
 % !TEX root = thesis-ex.tex
-The Standard Model (SM) \cite{Gaillard:1998ui} describes the interactions between elementary particles that are listed in Figure~\ref{fig:sm_particles}. It is one the most successful theories in physics and describes three of the four fundamental forces of nature. These are the strong interaction, the weak interaction, and the electromagnetic interaction. A quantum theory for gravity is not part of the SM.
+Quantum Chromodynamics is a gauge theory with SU(3) symmetry that describes the dynamics of the strong interactions between quarks and gluons. It is part of the Standard Model \cite{Gaillard:1998ui}, the building blocks of which are shown in Figure~\ref{fig:sm_particles}.
+
+%The Standard Model (SM) \cite{Gaillard:1998ui} describes the interactions between elementary particles that are listed in Figure~\ref{fig:sm_particles}. It is one the most successful theories in physics and describes three of the four fundamental forces of nature. These are the strong interaction, the weak interaction, and the electromagnetic interaction. A quantum theory for gravity is not part of the SM.
 
 \begin{figure}[htbp]
 \begin{center}
@@ -9,9 +11,9 @@ The Standard Model (SM) \cite{Gaillard:1998ui} describes the interactions betwee
 \end{center}
 \end{figure}
 
+%Within the SM, the dynamics of the strong interactions involving quarks and gluons are described by Quantum Chromodynamics (QCD), 
 
-
-Within the SM, the dynamics of the strong interactions involving quarks and gluons are described by Quantum Chromodynamics (QCD), a gauge theory with SU(3) symmetry. Quarks are fermions with a spin of $1/2$, and carry a fractional electric charge as well as a color charge. They all have mass and come in six flavors: up, down, top, bottom, strange, charm. The lightest quarks (u and d) combine and form stable particles, while the heavier quarks can only be produced in energetic environments and decay rapidly. Gluons are gauge bosons (force carriers) with a spin of $1$, and are what hold quarks together. The dynamics of the quarks and gluons are described by the QCD Lagrangian given as \cite{Beringer:1481544}:
+Quarks are fermions with a spin of $1/2$, and carry a fractional electric charge as well as a color charge. They all have mass and come in six flavors: up, down, top, bottom, strange, charm. The lightest quarks (u and d) combine and form stable particles, while the heavier quarks can only be produced in energetic environments and decay rapidly. Gluons are gauge bosons (force carriers) with a spin of $1$, and are what hold quarks together. The dynamics of the quarks and gluons are described by the QCD Lagrangian given as \cite{Beringer:1481544}:
 
 \begin{align}
 \mathcal{{L}}_{\mathrm{QCD}} = \sum_q \bar{\psi}_{q,a} (i \gamma^\mu \partial_\mu \delta_{ab} - g_s \gamma^\mu t_{ab}^C \mathcal{A}_\mu^C - m_q \delta_{ab}) \psi_{q,b} - \frac{1}{4} F_{\mu\nu}^A F^{A \mu\nu}
@@ -23,7 +25,7 @@ F_{\mu\nu}^A = \partial_\mu \mathcal{A}_\nu^A - \partial_\nu \mathcal{A}_\mu^A -
 \end{align}
 
 
-While many parallels can be drawn between Quantum Electrodynamics (QED) and QCD, the latter is a richer theory because its non-Abelian structure allows gluon-gluon interactions in addition to quark-gluon interactions. These interactions can be summarized as shown in Figure \ref{fig:qcd_diagrams}.
+While many parallels can be drawn between Quantum Electrodynamics (QED, the theory that describes photons and electrons) and QCD, the difference between the two comes from the gluon-gluon interactions allowed in QCD, making it non-Abelian. These interactions can be summarized as shown in Figure \ref{fig:qcd_diagrams}.
 
 \begin{figure}[htbp]
 \begin{center}
